// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClosedLocs Renders empty list 1`] = `
<div
  className="Table"
>
  <style>
    
            .Table .body .Row .Col.split-after::before {
                background-color: #152665;
            }
            
  </style>
  <div
    className="header"
    style={
      Object {
        "backgroundColor": "#0c163d",
        "color": "#ffffff",
      }
    }
  >
    <div
      className="Row"
    >
      <div
        className="Col"
        style={
          Object {
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        Legal Officer
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        Description
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "140px",
          }
        }
      >
        Status
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        LOC ID
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        Creation date
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        Closing date
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        Action
      </div>
    </div>
  </div>
  <div
    className="body"
  >
    <div
      className="Row empty-data"
      style={
        Object {
          "backgroundColor": "#152665",
          "color": "#ffffff",
        }
      }
    >
      <div
        className="empty-message"
      >
        No LOCs
      </div>
    </div>
  </div>
</div>
`;

exports[`ClosedLocs Renders null with no data 1`] = `
<div
  className="spinner-border"
/>
`;

exports[`ClosedLocs Renders pending requests 1`] = `
<div
  className="Table"
>
  <style>
    
            .Table .body .Row .Col.split-after::before {
                background-color: #152665;
            }
            
  </style>
  <div
    className="header"
    style={
      Object {
        "backgroundColor": "#0c163d",
        "color": "#ffffff",
      }
    }
  >
    <div
      className="Row"
    >
      <div
        className="Col"
        style={
          Object {
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        Legal Officer
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        Description
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "140px",
          }
        }
      >
        Status
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "left",
            "width": "calc(( 100% - 740px ) / 3)",
          }
        }
      >
        LOC ID
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        Creation date
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        Closing date
      </div>
      <div
        className="Col"
        style={
          Object {
            "textAlign": "center",
            "width": "200px",
          }
        }
      >
        Action
      </div>
    </div>
  </div>
  <div
    className="body"
  >
    <div>
      <div
        className="Row "
        style={
          Object {
            "color": "#ffffff",
          }
        }
      >
        <div
          className="Col"
          style={
            Object {
              "backgroundColor": "#152665",
              "fontSize": undefined,
              "textAlign": "left",
              "width": "calc(( 100% - 740px ) / 3)",
            }
          }
        >
          <div
            className="regular-cell"
            style={Object {}}
          >
            Patrick Gielen
          </div>
        </div>
        <div
          className="Col"
          style={
            Object {
              "backgroundColor": "#152665",
              "fontSize": undefined,
              "textAlign": "left",
              "width": "calc(( 100% - 740px ) / 3)",
            }
          }
        >
          <div
            className="regular-cell overflowing"
            style={Object {}}
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              LOC description
            </span>
          </div>
        </div>
        <div
          className="Col"
          style={
            Object {
              "backgroundColor": "#152665",
              "fontSize": undefined,
              "textAlign": "center",
              "width": "140px",
            }
          }
        >
          <span
            className="StatusCell"
            style={
              Object {
                "borderColor": "#37ad4b",
              }
            }
          >
            <img
              alt="activated"
              height="20px"
              src="/assets/activated.svg"
            />
             
            <span
              style={
                Object {
                  "color": "#37ad4b",
                  "textTransform": undefined,
                }
              }
            >
              Closed
            </span>
          </span>
        </div>
        <div
          className="Col"
          style={
            Object {
              "backgroundColor": "#152665",
              "fontSize": undefined,
              "textAlign": "left",
              "width": "calc(( 100% - 740px ) / 3)",
            }
          }
        >
          <div
            className="Row"
          >
            <div
              className="regular-cell overflowing"
              style={Object {}}
            >
              <span
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                132220282317401326589608735112778827114
              </span>
            </div>
            <button
              className="Button CopyPasteButton medium btn btn-primary"
              disabled={false}
              onClick={[Function]}
              style={Object {}}
              type="button"
            >
              <img
                alt="copy_paste"
                src="/assets/copy_paste.svg"
              />
            </button>
          </div>
        </div>
        <div
          className="Col"
          style={
            Object {
              "backgroundColor": "#152665",
              "fontSize": undefined,
              "textAlign": "center",
              "width": "200px",
            }
          }
        >
          <div
            className="regular-cell"
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            -
          </div>
        </div>
        <div
          className="Col"
          style={
            Object {
              "backgroundColor": "#152665",
              "fontSize": undefined,
              "textAlign": "center",
              "width": "200px",
            }
          }
        >
          <div
            className="regular-cell"
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            -
          </div>
        </div>
        <div
          className="Col"
          style={
            Object {
              "backgroundColor": "#152665",
              "fontSize": undefined,
              "textAlign": "center",
              "width": "200px",
            }
          }
        >
          <div
            className="action-cell"
          >
            <div
              className="ButtonGroup"
            >
              <div
                className="btn-group"
                role="group"
              >
                <button
                  className="Button btn btn-primary"
                  disabled={false}
                  onClick={[Function]}
                  style={Object {}}
                  type="button"
                >
                  View
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
